[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-api-quirks"
version = "0.1.0"
description = "Testing quirks in the llama.com API"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.11.0",
    "pytest-cov>=4.1.0",
    "openai>=1.13.0",
    "pre-commit>=3.5.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Ensure closing parenthesis formatting is consistent
preview = true
skip-magic-trailing-comma = false
